# bayesplay-py

./: Cargo.toml  README.md  README.qmd  pyproject.toml
.github/workflows/: CI.yml
python/bayesplay_py/: __init__.py  _lib.pyi  bayesplay_py.pyi  common.py  likelihood.py  model.py  prior.py
python/tests/: test_bayesfactor.py  test_bayesplay.py  test_likelihoods.py  test_priors.py
src/: lib.rs
