[package]
name = "bayesplay-py"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bayesplay_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
pythonize = "0.24.0"
serde = "1.0.219"
interface = {git = "https://github.com/bayesplay/bayesplay-rs"}
bayesplay = {git = "https://github.com/bayesplay/bayesplay-rs"}
dict_derive = "0.6.0"
serde_json = "1.0.140"
anyhow = "1.0.97"
