[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "bayesplay-py"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "bayesplay_py._lib"

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
]


[tool.pyright]
stubPath = "python/bayesplay_py"
reportExplicitAny = "none"
exclude = ["python/tests", ".venv"]
reportUnannotatedClassAttribute="none"
reportPrivateUsage="none"
reportImportCycles="none"
