[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "bayesplay-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "bayesplay_py._lib"

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "maturin>=1.8.3",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]


[tool.pyright]
stubPath = "python/bayesplay_py"
reportExplicitAny = "none"
exclude = ["python/tests", ".venv", "test*"]
reportUnannotatedClassAttribute="none"
reportPrivateUsage="none"
reportImportCycles="none"
reportImplicitOverride="none"
